# libzsf

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: conf.py  getting-started.rst  index.rst  requirements.txt  spelling_wordlist.txt  support.rst
docs/api/: c-api.rst  index.rst  python-api.rst
docs/examples/: index.rst
docs/examples/excel/: index.rst  phase.rst  steady.rst
docs/examples/python/: index.rst  phase-multiple-lockages.rst  phase.rst  steady.rst
docs/images/source/: flushing_diagrams.py  introduction_model_concept.xlsx  procdef_phases_locking_cycle.xlsx
docs/theory/: cycle_averaged_flows_salinities.rst  equations_per_locking_phase.rst  index.rst  introduction.rst  numerical_approach_cycle_averaged.rst  processes_and_definitions.rst
examples/python/: lockages.csv  phase.py  phase_multiple_lockages.py  reservoirs.py  steady.py
include/: zsf.h
src/: util.h  zsf.c  zsf.h
wrappers/excel/: zsf.xlsm
wrappers/python/: setup.py  tox.ini
wrappers/python/src/: _pyzsf_build.py
wrappers/python/src/pyzsf/: pyzsf.py
wrappers/python/tests/: test_steady.py
